src/objects/Import_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency for automatic scheduling of the import definition.  Automatically creates an Import Instance with status scheduled.</description>
        <inlineHelpText>Frequency for automatic scheduling of the import definition.  Automatically creates an Import Instance with status scheduled.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Import_Files__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Required Import Files is the number of import files required before the import can be scheduled.</description>
        <inlineHelpText>Required Import Files is the number of import files required before the import can be scheduled.</inlineHelpText>
        <label>Required Import Files</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Time__c</fullName>
        <description>Scheduled time for automatic scheduling.  Combined with Frequency to automatically create an Import Instance with Status Scheduled.</description>
        <inlineHelpText>Scheduled time for automatic scheduling.  Combined with Frequency to automatically create an Import Instance with Status Scheduled.</inlineHelpText>
        <label>Schedule Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FFN</fullName>
                </value>
                <value>
                    <fullName>SubPool</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Import Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Require_Import_Files__c</columns>
        <columns>Frequency__c</columns>
        <columns>Schedule_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Import Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Import Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>